correction affichage version mobile object fit img et suppression des sous-titres

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -33,13 +33,12 @@
   }
 
   .wallpaperBig {
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     z-index: -2;
     position: absolute;
-    top: 5;
-    right: 5;
     opacity: 0.4;
+    object-fit: cover;
   }
 
   .main-content {
